05-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - dev.k8s.eu-west-1.inforcloud.info	
      # tls-secret should be created before applying ingress 
      secretName: tls-secret
  rules:
    - host: dev.k8s.eu-west-1.inforcloud.info
      http:
        paths:
        - path: /bluesvc
          backend:
            serviceName: blue-svc
            servicePort: 5678
        - path: /redsvc
          backend:
            serviceName: red-svc
            servicePort: 5678
